using UnityEngine;

public interface IReceiver
{
   void Move(Vector3 pos);
}
