@startuml
'https://plantuml.com/class-diagram

class Client
class Invoker
class MoveCommand
class PlayerReceiver
interface ICommand
interface IReceiver

ICommand <|.u. MoveCommand
IReceiver <|..o PlayerReceiver
Invoker o--> ICommand
PlayerReceiver <-u- MoveCommand
Client ..> MoveCommand

@enduml